--- a/adopt-me/scr/index.html
+++ b/adopt-me/scr/index.html
@@ -16,8 +16,8 @@
             const App = () => {
                 return React.createElement(
                     "div",
-                    {},
-                    React.createElement("h1", {}, "Adopt Me!")
+                    {"id": "test"},
+                    [React.createElement("h1", {}, "Adopt Me!"), React.createElement("h1", {}, "Adopt Me!")]
                 );
             }
 
