--- a/adopt-me/scr/index.html
+++ b/adopt-me/scr/index.html
@@ -11,20 +11,6 @@
         <div id="root">not rendered</div>
         <script src="https://unpkg.com/react/umd/react.development.js"></script>
         <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
-        <script>
-            // your code is going to be here
-            const App = () => {
-                return React.createElement(
-                    "div",
-                    {"id": "test"},
-                    [React.createElement("h1", {}, "Adopt Me!"), React.createElement("h1", {}, "Adopt Me!")]
-                );
-            }
-
-            ReactDOM.render(
-                React.createElement(App),
-                document.getElementById("root")
-            )
-        </script>
+        <script src="./App.js"></script>
     </body>
 </html>
